@@ -5,6 +5,7 @@ Revision 0.0.4, 01-07-2015
 * Fix to repeated imports in generated code at pysnmp backend
 * Fix to mibdump tool to properly handle the --generate-mib-texts option.
 * Fix to Python compile() - optimize flag is valid only past Python 3.1
+* Tighten file creation security at pysmi.writer.pyfile
 
 Revision 0.0.3, 28-06-2015
 --------------------------
